Fix fullscreen cropping and minimize screen freezing on mobile

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ video {
   width: 100%;
   height: 100%;
   display: block;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /* NEON LOADER SPINNER */
